toast text overlap fixed

--- a/src/style/components/_menu.scss
+++ b/src/style/components/_menu.scss
@@ -18,7 +18,7 @@ nav {
   justify-content: center;
   @extend %transition-opacity;
   opacity: 0;
-  font-size: 1em;
+  font-size: 0.7em;
   &.success {
     opacity: 1;
     background-color: lightgreen;
